<resources>
    <string name="app_name">Link Manager</string>

    <string name="test_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="add_link_to_collection">Add link to collection</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="btn_add">Add</string>
    <string name="hint_link">Link</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_add_to_holder">Add to %s</string>
    <string name="msg_please_enter_title">Please enter title</string>
    <string name="msg_please_enter_description">Please enter description</string>
    <string name="msg_please_enter_link">Please enter link</string>
    <string name="hint_collection_name">Collection name</string>
    <string name="text_add_collection">Add collection</string>
    <string name="msg_please_enter_collection_name">Please enter collection name</string>
    <string name="text_home">Home</string>
    <string name="text_settings">Settings</string>
    <string name="text_appearance">Appearance</string>
    <string name="text_dark">Dark</string>
    <string name="text_light">Light</string>
    <string name="text_system">System</string>
    <string name="text_open_link_with_external_browser">Open links with external browser</string>
    <string name="btn_ok">OK</string>
    <string name="msg_unable_to_open_link">Unable to open link!</string>
    <string name="msg_it_doesn_t_look_correct">It doesn\'t look correct</string>
    <string name="text_edit">Edit</string>
    <string name="text_delete">Delete</string>
    <string name="text_change_collection">Change Collection</string>
    <string name="edit_s">Edit %s</string>
    <string name="msg_link_copied_to_clipboard">Link copied to clipboard</string>
    <string name="text_save">Save</string>
    <string name="text_move_to_another_tab">Move to another tab</string>
</resources>