<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/dp_10"
    android:paddingStart="0dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_10"
        app:cardCornerRadius="@dimen/dp_4"
        app:cardElevation="@dimen/dp_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingVertical="@dimen/dp_4"
            android:paddingHorizontal="@dimen/dp_12">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEdit"
                android:layout_width="match_parent"
                style="@style/PopupItem"
                android:text="@string/text_edit" />

            <View style="@style/Divider" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDelete"
                style="@style/PopupItem"
                android:layout_width="match_parent"
                android:text="@string/text_delete" />

            <View style="@style/Divider" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvChangeCollection"
                style="@style/PopupItem"
                android:text="@string/text_change_collection" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>